# peace_maker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  dump.rdb  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  dependencies.py  errors.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py
backend/app/feed/: __init__.py  __main__.py  app.py  lock.py  service.py
backend/app/modules/admin/: __init__.py  orm.py  permissions.py  repository.py  router.py  service.py
backend/app/modules/ai_engine/: __init__.py  scoring.py
backend/app/modules/analytics/: __init__.py  api.py  metrics.py  orm.py  reports.py  service.py
backend/app/modules/auth/: cookies.py  models.py  repository.py  router.py  schemas.py  service.py  tickets.py
backend/app/modules/backtesting/: __init__.py  api.py  engine.py  models.py  service.py  simulator.py  stats.py
backend/app/modules/broker/: __init__.py  api.py  auth.py  factory.py  historical.py  mappers.py  metrics.py  orm.py  ports.py  provider.py  reconnect.py  service.py  token_store.py
backend/app/modules/committee/: __init__.py  api.py  base.py  cio.py  committee.py  config.py  metrics.py  service.py
backend/app/modules/health/: diagnostics.py  router.py
backend/app/modules/journal/: __init__.py  api.py  models.py  orm.py  service.py
backend/app/modules/market_data/: __init__.py  api.py  cache.py  candle_builder.py  indicator_engine.py  instrument_master.py  metrics.py  option_chain_engine.py  options_math.py  orm.py  repository.py  runner.py  service.py
backend/app/modules/news/: api.py  normalize.py  orm.py  service.py
backend/app/modules/notifications/: __init__.py
backend/app/modules/paper_trading/: __init__.py  api.py  costs.py  engine.py  metrics.py  models.py  orm.py  repository.py  runner.py  service.py
backend/app/modules/portfolio/: __init__.py  awareness.py
backend/app/modules/risk/: __init__.py
backend/app/modules/scanner/: __init__.py  api.py  context.py  engine.py  explain.py  macro_events.py  opportunity.py  regime.py  service.py
backend/app/modules/strategy/: __init__.py  base.py  regime_types.py  registry.py  ta.py
backend/app/modules/users/: models.py  repository.py  router.py  schemas.py
backend/app/modules/validation/: api.py  bootstrap.py  deflated_sharpe.py  monte_carlo.py  multiple_testing.py  orm.py  partition.py  service.py  stability.py  statistics.py  walk_forward.py
backend/app/shared/events/: __init__.py  bus.py  stream.py  types.py
backend/app/shared/indicators/: __init__.py  core.py  incremental.py
backend/app/shared/market_calendar/: __init__.py  calendar.py
backend/app/websocket/: channels.py  gateway.py
backend/app/workers/: reports.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_identity.py  0002_market_intelligence.py  0003_timescale_policies.py  0004_broker_tokens.py  0005_paper_trading.py  0006_user_preferences.py  0007_admin.py  0008_validation.py
backend/scripts/: __init__.py  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_health.py
backend/tests/unit/: test_config.py  test_prod_guards.py  test_security.py
(+233 files in other folders)
