[project]
name = "bkn-backend"
version = "0.1.0"
description = "BKN AI Capital — backend (FastAPI)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23.0,<24.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "email-validator>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<0.31",
    "redis>=5.2,<6.0",
    "pyjwt>=2.10,<3.0",
    "passlib[argon2]>=1.7.4,<2.0",
    "argon2-cffi>=23.1,<24.0",
    "python-multipart>=0.0.12,<0.1",
    "structlog>=24.4,<25.0",
    "prometheus-client>=0.21,<0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.28,<0.29",
    "aiosqlite>=0.20,<0.21",
    "fakeredis>=2.26,<3.0",
    "ruff>=0.8,<0.9",
    "black>=24.10,<25.0",
    "mypy>=1.13,<2.0",
    "types-passlib>=1.7,<2.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff — linting (fast, replaces flake8/isort/pyflakes/pycodestyle)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "C4",        # comprehensions
    "UP",        # pyupgrade
    "N",         # pep8-naming
    "ASYNC",     # flake8-async
    "S",         # bandit (security)
    "T20",       # no print
    "RUF",
]
ignore = [
    "S101",  # asserts allowed (used in tests)
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "S311",  # pseudo-random is used for simulation/jitter, never for crypto
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # hardcoded test credentials are fine
"migrations/**" = ["E501", "N999"]

# ---------------------------------------------------------------------------
# Black — formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# MyPy — static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["passlib.*", "uvicorn"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
markers = [
    "integration: tests that require a database/redis (may be skipped locally)",
]
